Исправлена модель возвращаемого ответа с предыдущими сообщениями
